Freestyle: dashed lines crashes blender #40020

Closed
opened 2014-05-04 16:34:14 +02:00 by Thomas Beck · 15 comments
Member

Hi Tamito,
I think this one is for you...

System Information
Ubuntu 64 2*Gtx560tioc 2Gb RAM each, 16gb RAM, i7 4470k

Blender Version
Broken: Current Trunk (compiled 5 minutes ago)
Worked: 2.70a

Short description of error

Exact steps for others to reproduce the error
I'm just documenting parts of Freestyle for my upcoming Blender book. While trying out dashed lines Blender kept crashing. I'll append the file: FreestyleCrash.blend - just hit F12. If you need a backtrace (because it does not crashes on your machine just tell me, I'll create one then..

Greetings, Thomas

Hi Tamito, I think this one is for you... **System Information** Ubuntu 64 2*Gtx560tioc 2Gb RAM each, 16gb RAM, i7 4470k **Blender Version** Broken: Current Trunk (compiled 5 minutes ago) Worked: 2.70a **Short description of error** **Exact steps for others to reproduce the error** I'm just documenting parts of Freestyle for my upcoming Blender book. While trying out dashed lines Blender kept crashing. I'll append the file: [FreestyleCrash.blend](https://archive.blender.org/developer/F86903/FreestyleCrash.blend) - just hit F12. If you need a backtrace (because it does not crashes on your machine just tell me, I'll create one then.. Greetings, Thomas
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Tamito Kajiyama was assigned by Thomas Beck 2014-05-04 16:34:14 +02:00
Author
Member

Added subscriber: @plasmasolutions

Added subscriber: @plasmasolutions

Thanks for the problem report. I will look into it asap.

Thanks for the problem report. I will look into it asap.
Member

Added subscriber: @totoro-4

Added subscriber: @totoro-4
Member

Maybe this is related to the changing to Python 3.4. I think 2.70a was compiled with 3.3.

Maybe this is related to the changing to Python 3.4. I think 2.70a was compiled with 3.3.

This issue was referenced by blender/blender-addons-contrib@047c3aa728

This issue was referenced by blender/blender-addons-contrib@047c3aa728a4bb944616a084805988714b796d52

This issue was referenced by 047c3aa728

This issue was referenced by 047c3aa728a4bb944616a084805988714b796d52

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 047c3aa728.

Closed by commit 047c3aa728.

Changed status from 'Resolved' to: 'Open'

Changed status from 'Resolved' to: 'Open'

Another related crash case was reported in 047c3aa728#1.

Another related crash case was reported in 047c3aa728#1.

This issue was referenced by blender/blender-addons-contrib@ef1e511bb6

This issue was referenced by blender/blender-addons-contrib@ef1e511bb6caaca940f603fa41e1801f842f150b

This issue was referenced by ef1e511bb6

This issue was referenced by ef1e511bb6caaca940f603fa41e1801f842f150b

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit ef1e511bb6.

Closed by commit ef1e511bb6.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40020
No description provided.