Fix T40020: Freestyle: dashed lines crashes blender.

The crash was due to an out-of-range vertex index reference that occured while
computing texture coordinates of strokes with tips.